--- a/pages/settings/settingspage.ui
+++ b/pages/settings/settingspage.ui
@@ -182,9 +182,39 @@
              <string>Printers</string>
             </property>
             <layout class="QGridLayout" name="gridLayout_4">
+             <property name="leftMargin">
+              <number>0</number>
+             </property>
+             <property name="topMargin">
+              <number>0</number>
+             </property>
+             <property name="rightMargin">
+              <number>0</number>
+             </property>
+             <property name="bottomMargin">
+              <number>0</number>
+             </property>
+             <property name="spacing">
+              <number>0</number>
+             </property>
              <item row="0" column="0" rowspan="2">
               <widget class="QWidget" name="widget" native="true">
                <layout class="QGridLayout" name="gridLayout_6">
+                <property name="leftMargin">
+                 <number>0</number>
+                </property>
+                <property name="topMargin">
+                 <number>0</number>
+                </property>
+                <property name="rightMargin">
+                 <number>0</number>
+                </property>
+                <property name="bottomMargin">
+                 <number>0</number>
+                </property>
+                <property name="spacing">
+                 <number>6</number>
+                </property>
                 <item row="3" column="1">
                  <widget class="QPushButton" name="removePrinterButton">
                   <property name="enabled">
@@ -226,7 +256,11 @@
                  </widget>
                 </item>
                 <item row="0" column="0" rowspan="5">
-                 <layout class="QVBoxLayout" name="printerListLayout"/>
+                 <layout class="QVBoxLayout" name="printerListLayout">
+                  <property name="spacing">
+                   <number>0</number>
+                  </property>
+                 </layout>
                 </item>
                </layout>
               </widget>
