--- a/pages/printer/printerpage.ui
+++ b/pages/printer/printerpage.ui
@@ -221,7 +221,7 @@
           </sizepolicy>
          </property>
          <property name="currentIndex">
-          <number>1</number>
+          <number>0</number>
          </property>
          <widget class="QWidget" name="overviewTab">
           <attribute name="title">
@@ -529,17 +529,24 @@
               <enum>QFrame::Raised</enum>
              </property>
              <layout class="QGridLayout" name="gridLayout_10">
-              <item row="2" column="0" colspan="2">
+              <item row="3" column="0" colspan="2">
                <widget class="QLabel" name="fileLabel">
                 <property name="text">
                  <string>File:</string>
                 </property>
                </widget>
               </item>
-              <item row="1" column="0" colspan="2">
-               <widget class="QLabel" name="statusMessageLabel">
+              <item row="0" column="1">
+               <widget class="QLabel" name="printStatusLabel">
                 <property name="text">
-                 <string/>
+                 <string>Status:</string>
+                </property>
+               </widget>
+              </item>
+              <item row="4" column="0" colspan="2">
+               <widget class="QLabel" name="etaLabel">
+                <property name="text">
+                 <string>ETA:</string>
                 </property>
                </widget>
               </item>
@@ -565,26 +572,32 @@
                 </property>
                </widget>
               </item>
-              <item row="4" column="0" colspan="2">
+              <item row="5" column="0" colspan="2">
                <widget class="QProgressBar" name="printProgress">
                 <property name="value">
                  <number>0</number>
                 </property>
                </widget>
               </item>
-              <item row="0" column="1">
-               <widget class="QLabel" name="printStatusLabel">
+              <item row="1" column="0" colspan="2">
+               <widget class="QLabel" name="statusMessageLabel">
                 <property name="text">
-                 <string>Status:</string>
+                 <string/>
                 </property>
                </widget>
               </item>
-              <item row="3" column="0" colspan="2">
-               <widget class="QLabel" name="etaLabel">
-                <property name="text">
-                 <string>ETA:</string>
+              <item row="2" column="0">
+               <spacer name="verticalSpacer">
+                <property name="orientation">
+                 <enum>Qt::Vertical</enum>
                 </property>
-               </widget>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>20</width>
+                  <height>40</height>
+                 </size>
+                </property>
+               </spacer>
               </item>
              </layout>
             </widget>
